2013.09.15.17:
- FIX: typo in German preferences
- FIX: especially for multiplications and divisions, the numbers are better balanced, giving more interesting questions (Closes: Issues #2 and #3).
- NEW: High-scores list when long pressing on challenges.
- DEV: renamed the random functions and made them return numbers
including the max boundary + removed non linear getLong function +
adapted IntegerProvider to changes done.
- DEV: added HighscoresCursorAdapter class to present nicely highscores in their list
- DEV: Bumped the targetSdkVersion to 18 (4.3) - no impact expected
- DEV: added HighscoresList Activity with all list layouts pertaining to it
- DEV: smaller lint corrections.
2013.05.04.13
- NEW: High-score ranking is shown when ending a challenge if under 50 best (you can't get a list yet).
- DEV: new class HighscoresDbAdapter.
- DEV: moved all DB related classes to a separate 'db' package.
2013.02.03.13
- CHG: divisions with max applied to big number should be more "interesting".
- CHG: copyright 2012-2013 instead of 2012 (nobody cares, I know).
- DEV: new class util.RandomNonLinear derived from java.util.Random to get nextLong and non linear distribution.
2013.01.13.13:
- CHG: texts have been modified to show nicer and more international quote signs.
- NEW: win/loss dialogs show the actual result or the given answer.
- NEW: win/loss dialogs of training allows to jump directly to the next exercise.
- FIX: state of training or challenge was not properly saved when rotating device.
- DEV: moved to git at https://code.google.com/p/pmtd/
2012.12.18.20:
- NEW: challenge mode can now be used and shows a result with score (which can't yet be stored).
- CHG: specific title for each activity.
- DEV: new ChallengeRoundActivity activity.
2012.12.02.21:
- FIX: correct function of new exercise button (sorry!).
- FIX: correct labels for challenge context menu (only in English).