@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="eu.lavarde.pmtd"
-      android:versionCode="2013120117"
-      android:versionName="2013.12.01.17">
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="18" />
+      android:versionCode="2014020117"
+      android:versionName="2014.02.01.17">
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19" />
     <application android:icon="@drawable/icon" android:label="@string/app_name"
         	android:theme="@style/CalculationTangoTheme"
         	android:allowBackup="true">
