@@ -8,4 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-7
+target=android-19
+android.library.reference.1=../../extras/android/support/v7/appcompat
